# blinken

./: .craft.ini  .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .snapcraft.yaml  CMakeLists.txt  Changelog  Makefile.am  README.packagers  blinken.appdata.xml  org.kde.blinken.appdata.xml  snapcraft.yaml
LICENSES/: LicenseRef-SJFonts.txt
doc/: CMakeLists.txt  index.docbook
fonts/: CMakeLists.txt  Makefile.am  astro_readme.txt  steve.ttf.license  steve_readme.txt
harmattan/: CMakeLists.txt  COMPILE_HOWTO  COMPILE_HOWTO_CMAKE  blinken.pro  blinken.sh  blinken_harmattan.desktop  blinkenproxywidget.cpp  blinkenproxywidget.h
harmattan/qml/: main.qml
harmattan/qtc_packaging/debian_harmattan/: changelog  control  rules
harmattan/qtc_packaging/debian_harmattan_cmake/: README  copyright  rules
icons/: CMakeLists.txt  Makefile.am  crsc-app-ksimon.svgz
images/: CMakeLists.txt  Makefile.am
po/ar/: blinken.po
po/ast/: blinken.po
po/be/: blinken.po
po/bg/: blinken.po
po/bn/: blinken.po
po/br/: blinken.po
po/bs/: blinken.po
po/ca/: blinken.po
po/ca/docs/blinken/: index.docbook
po/ca@valencia/: blinken.po
po/cs/: blinken.po
po/csb/: blinken.po
po/cy/: blinken.po
po/da/: blinken.po
po/de/: blinken.po
po/de/docs/blinken/: index.docbook
po/el/: blinken.po
po/en_GB/: blinken.po
po/eo/: blinken.po
po/es/: blinken.po
po/es/docs/blinken/: index.docbook
po/et/: blinken.po
po/et/docs/blinken/: index.docbook
po/eu/: blinken.po
po/fa/: blinken.po
po/fi/: blinken.po
po/fr/: blinken.po
po/fr/docs/blinken/: index.docbook
po/ga/: blinken.po
po/gl/: blinken.po
po/gu/: blinken.po
po/he/: blinken.po
po/hi/: blinken.po
po/hne/: blinken.po
po/hr/: blinken.po
po/hu/: blinken.po
po/ia/: blinken.po
po/is/: blinken.po
po/it/: blinken.po
po/it/docs/blinken/: index.docbook
po/ja/: blinken.po
po/ka/: blinken.po
po/kk/: blinken.po
po/km/: blinken.po
po/ko/: blinken.po
po/lt/: blinken.po
po/lv/: blinken.po
po/mk/: blinken.po
po/ml/: blinken.po
po/mr/: blinken.po
po/ms/: blinken.po
po/nb/: blinken.po
po/nds/: blinken.po
po/ne/: blinken.po
po/nl/: blinken.po
po/nl/docs/blinken/: index.docbook
po/nn/: blinken.po
po/oc/: blinken.po
po/pa/: blinken.po
po/pl/: blinken.po
po/pt/: blinken.po
po/pt/docs/blinken/: index.docbook
po/pt_BR/: blinken.po
po/pt_BR/docs/blinken/: index.docbook
po/ro/: blinken.po
po/ru/: blinken.po
po/sa/: blinken.po
po/se/: blinken.po
po/si/: blinken.po
po/sk/: blinken.po
po/sl/: blinken.po
po/sq/: blinken.po
po/sv/: blinken.po
po/sv/docs/blinken/: index.docbook
po/tg/: blinken.po
po/tr/: blinken.po
po/ug/: blinken.po
po/uk/: blinken.po
po/uk/docs/blinken/: index.docbook
po/vi/: blinken.po
po/zh_CN/: blinken.po
po/zh_TW/: blinken.po
sounds/: CMakeLists.txt  Makefile.am
src/: CMakeLists.txt  Makefile.am  Messages.sh  artsplayer.cpp  artsplayer.h  blinken.cpp  blinken.desktop  blinken.h  blinken.kcfg  blinken.rc  blinkengame.cpp  blinkengame.h  button.cpp  button.h  counter.cpp  counter.h  fontchecker.cpp  fontchecker.h  fontutils.cpp  fontutils.h  highScoreManager.cpp  highScoreManager.h  highscoredialog.cpp  highscoredialog.h  ksimon.cpp  ksimon.desktop  ksimon.h  main.cpp  maskedmousearea.cpp  maskedmousearea.h  number.cpp  number.h  org.kde.blinken.desktop  settings.kcfgc  simongame.cpp  simongame.h  soundsplayer.cpp  soundsplayer.h
src/android/: AndroidManifest.xml
src/android/res/values/: styles.xml
src/ui/: Blinken.qml  BlinkenMenu.qml  ExitButton.qml  GameButton.qml  GameButtons.qml  GameOptions.qml  HighScoreButton.qml  HighScoreLists.qml  Numbers.qml  ScoreAndCounter.qml  ScoreList.qml
